<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/shop"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center|top"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="-100dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:gravity="center"
            android:textColor="@color/red_light"
            android:textSize="50sp"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/ic_person"
            />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:labelFor="@id/username"
            android:inputType="text"
            android:background="@drawable/edit_text"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="0dp"
            android:padding="10dp"
            android:textColorHint="@color/white"
            android:textColorLink="@color/white"
            android:hint="@string/enter_username"
            android:textColor="@color/white"
            android:drawableStart="@drawable/ic_person"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:labelFor="@id/password"
            android:inputType="textPassword"
            android:background="@drawable/edit_text"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:textColorHint="@color/white"
            android:hint="@string/enter_password"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/ic_lock"
            android:drawableRight="@drawable/ic_remove_red_eye_black_24dp"
            />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:labelFor="@id/forgot_password"
            android:layout_gravity="right"
            android:gravity="right"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:onClick="onClick"
            />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:inputType="text"
            android:text="@string/login"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:textColor="#ffffff"
            android:background="@color/btn_color"
            android:textStyle="bold"
            android:longClickable="false"
            android:onClick="onClick"

            />

        <TextView
            android:id="@+id/account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account"
            android:labelFor="@id/account"
            android:layout_marginTop="40dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:onClick="onClick"
            />

    </LinearLayout>

</LinearLayout>