<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccount"
    android:orientation="vertical"
    android:background="@drawable/sign_up_img"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center|top"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:labelFor="@id/username"
                    android:inputType="text"
                    android:background="@drawable/edit_text"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="0dp"
                    android:padding="10dp"
                    android:textColorHint="@color/white"
                    android:textColorLink="@color/white"
                    android:hint="@string/name"
                    android:textColor="@color/white"
                    android:drawableStart="@drawable/ic_person"
                    />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:labelFor="@id/username"
                    android:inputType="text"
                    android:background="@drawable/edit_text"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:padding="10dp"
                    android:textColorHint="@color/white"
                    android:textColorLink="@color/white"
                    android:hint="@string/enter_username"
                    android:textColor="@color/white"
                    android:drawableStart="@drawable/ic_person"
                    />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:labelFor="@id/username"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/edit_text"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:padding="10dp"
                    android:textColorHint="@color/white"
                    android:textColorLink="@color/white"
                    android:hint="@string/email"
                    android:textColor="@color/white"
                    android:drawableStart="@drawable/ic_email"
                    />

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:labelFor="@id/username"
                    android:inputType="phone"
                    android:background="@drawable/edit_text"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:padding="10dp"
                    android:textColorHint="@color/white"
                    android:textColorLink="@color/white"
                    android:hint="@string/phone"
                    android:textColor="@color/white"
                    android:drawableStart="@drawable/ic_smartphone"
                    />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:labelFor="@id/username"
                    android:inputType="textPassword"
                    android:background="@drawable/edit_text"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:padding="10dp"
                    android:textColorHint="@color/white"
                    android:textColorLink="@color/white"
                    android:hint="@string/enter_password"
                    android:textColor="@color/white"
                    android:drawableStart="@drawable/ic_lock"
                    />

                <EditText
                    android:id="@+id/conf_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:labelFor="@id/username"
                    android:inputType="textPassword"
                    android:background="@drawable/edit_text"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:padding="10dp"
                    android:textColorHint="@color/white"
                    android:textColorLink="@color/white"
                    android:hint="@string/conf_password"
                    android:textColor="@color/white"
                    android:drawableStart="@drawable/ic_lock"
                    />

                <EditText
                    android:id="@+id/age"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:labelFor="@id/username"
                    android:inputType="number"
                    android:background="@drawable/edit_text"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:padding="10dp"
                    android:textColorHint="@color/white"
                    android:textColorLink="@color/white"
                    android:hint="@string/age"
                    android:textColor="@color/white"
                    android:drawableStart="@drawable/ic_person"
                    />

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:inputType="text"
                    android:text="@string/register"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:textColor="#ffffff"
                    android:background="@drawable/sign_btn"
                    android:textStyle="bold"
                    android:longClickable="false"

                    />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>